--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/">About</a>
-            <a href="{{ site.baseurl }}/">Resume</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/people">Resume</a>
           </nav>
         </header>
       </div>
