--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/people">Resume</a>
+            <a href="{{ site.baseurl }}/people">Life</a>
+            <a href="{{ site.baseurl }}/publications">Resume</a>
           </nav>
         </header>
       </div>
