--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/people">Life</a>
-            <a href="{{ site.baseurl }}/publications">Resume</a>
+            <a href="{{ site.baseurl }}/pubs">Resume</a>
           </nav>
         </header>
       </div>
